--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 		<nav>
 			<div class="wrapper">
 				<div class="logo"></div>
-				<p class="logotext"> Pedro </br> Sorto </p>	
+				<p class="logotext"> trend-e </br> app </p>	
 				<ul>
 					<a href="/home/ps/Documents/mhacks2015/trend-e-app/templatesindex.html"><li class="menupage">HOME</li></a>
 					<a href="/home/ps/Documents/mhacks2015/trend-e-app/templatescases.html"><li>CASES</li></a>
