--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 				<p class="logotext"> trend-e </br> app </p>	
 				<ul>
 					<a href="/home/ps/Documents/mhacks2015/trend-e-app/templatesindex.html"><li class="menupage">HOME</li></a>
-					<a href="/home/ps/Documents/mhacks2015/trend-e-app/templatescases.html"><li>CASES</li></a>
+					<a href="/home/ps/Documents/mhacks2015/trend-e-app/templatescases.html"><li>ABOUT US</li></a>
 					<a href="/home/ps/Documents/mhacks2015/trend-e-app/templatesportfolio.html"><li>PORTFOLIO</li></a>
 					<a href="/home/ps/Documents/mhacks2015/trend-e-app/templatesblog.html"><li>BLOG</li></a>
 					<a href="/home/ps/Documents/mhacks2015/trend-e-app/templatescontacts.html"><li>CONTACTS</li></a>
