--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title></title>
+<title>Blog</title>
 <script src="//code.jquery.com/jquery-1.10.2.js"></script>
 <script> 
 $(function(){
