--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,17 +1,38 @@
-<html>
-<head>
-<title>Blog</title>
-<script src="//code.jquery.com/jquery-1.10.2.js"></script>
-<script> 
-$(function(){
-  $("#header").load("header.html"); 
-  $("#footer").load("footer.html"); 
-});
-</script> 
-</head>
-<body>
-<div id="header"></div>
-<!--Remaining section-->
-<div id="footer"></div>
-</body>
+<!doctype html>
+<html lang="eng">
+	<head>
+		<meta charset="utf-8" />
+		<title>My Portfolio</title>
+		<link rel="stylesheet" href="style.css">
+	</head>
+
+	<body>
+		<nav>
+			<div class="wrapper">
+				<div class="logo"></div>
+
+				<p class="logotext"> trend-e </br> app </p>	
+				<ul>
+					<a href="index"><li class="menupage">HOME</li></a>
+					<a href="cases"><li>ABOUT US</li></a>
+					<a href="portfolio"><li>PORTFOLIO</li></a>
+					<a href="blog"><li>BLOG</li></a>
+					<a href="contacts"><li>CONTACTS</li></a>
+				</ul>
+			</div>
+		</nav>
+
+		<header> 
+			<div class="wrapper"></div>
+		</header>
+
+		<section>
+			<div class="wrapper"></div>
+		</section>
+
+		<footer>
+			<div class="wrapper"></div>
+		</footer>		
+
+	</body>
 </html>
