put styling directly in indiex

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -13,10 +13,10 @@
 
 				<p class="logotext"> trend-e blog </br> app </p>	
 				<ul>
-					<a href="index.html"><li class="menupage">HOME</li></a>
+					<a href="index.html"><li>HOME</li></a>
 					<a href="cases.html"><li>ABOUT US</li></a>
 					<a href="portfolio.html"><li>PORTFOLIO</li></a>
-					<a href="blog.html"><li>BLOG</li></a>
+					<a href="blog.html"><li class="menupage">BLOG</li></a>
 					<a href="contacts.html"><li>CONTACTS</li></a>
 				</ul>
 			</div>
