--- a/templates/style.css
+++ b/templates/style.css
@@ -72,3 +72,13 @@ nav ul li:hover{
 	background-color: #f2f2f2;
  	color: orange;
 }
+
+
+}
+
+div {
+    width: 320px;
+    padding: 10px;
+    border: 5px solid gray;
+    margin: 0; 
+}
