--- a/templates/blog.html
+++ b/templates/blog.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 	<head>
 		<meta charset="utf-8" />
-		<title>My Portfolio</title>
+		<title>Companies</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
 
