--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -11,7 +11,7 @@
 			<div class="wrapper">
 				<div class="logo"></div>
 
-				<p class="logotext"> contacts </br> app </p>	
+				<p class="logotext"> Say Hello </br> app </p>	
 				<ul>
 					<a href="About Us.html"><li class="menupage">HOME</li></a>
 					<a href="Be trend-e.html"><li>ABOUT US</li></a>
