--- a/templates/index.html
+++ b/templates/index.html
@@ -133,11 +133,11 @@
 
 				<p class="logotext"> trend-e homepage</br> app </p>	
 				<ul>
-					<li class="menupage"><a href="/" target="_self">HOME</a></li>
-					<li><a href="aboutus" target="_self">ABOUT US</a></li>
-					<a href="portfolio.html"><li>PORTFOLIO</li></a>
+					<li class="menupage"><a href="/" target="_self">ABOUT US</a></li>
+					<li><a href="aboutus" target="_self">BE TREND-E</a></li>
+					<a href="portfolio.html"><li>COMPANIES</li></a>
 					<a href="blog.html"><li>BLOG</li></a>
-					<a href="contacts.html"><li>CONTACTS</li></a>
+					<a href="contacts.html"><li>SAY HELLO</li></a>
 				</ul>
 			</div>
 		</nav>
