--- a/templates/contacts.html
+++ b/templates/contacts.html
@@ -11,13 +11,13 @@
 			<div class="wrapper">
 				<div class="logo"></div>
 
-				<p class="logotext"> Say Hello </br> app </p>	
+				<p class="logotext"> trend-e homepage</br> app </p>	
 				<ul>
-					<a href="About Us.html"><li class="menupage">HOME</li></a>
-					<a href="Be trend-e.html"><li>ABOUT US</li></a>
-					<a href="Companies.html"><li>PORTFOLIO</li></a>
-					<a href="Blog.html"><li>BLOG</li></a>
-					<a href="Say Hello.html"><li>CONTACTS</li></a>
+					<a href="/" target="_self">ABOUT US</a></li>
+					<li><a href="aboutus" target="_self">BE TREND-E</a></li>
+					<a href="portfolio.html"><li>COMPANIES</li></a>
+					<a href="blog.html"><li>BLOG</li></a>
+					<li class="menupage"><a href="contacts.html"><li>SAY HELLO</li></a>
 				</ul>
 			</div>
 		</nav>
