--- a/templates/blog.html
+++ b/templates/blog.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 	<head>
 		<meta charset="utf-8" />
-		<title>Companies</title>
+		<title>BLOG</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
 
@@ -11,13 +11,13 @@
 			<div class="wrapper">
 				<div class="logo"></div>
 
-				<p class="logotext"> trend-e blog </br> app </p>	
+				<p class="logotext"> trend-e homepage</br> app </p>	
 				<ul>
-					<a href="About Us.html"><li>HOME</li></a>
-					<a href="Be trend-e.html"><li>ABOUT US</li></a>
-					<a href="Companies.html"><li>PORTFOLIO</li></a>
-					<a href="Blog.html"><li class="menupage">BLOG</li></a>
-					<a href="Say Hello.html"><li>CONTACTS</li></a>
+					<a href="/" target="_self">ABOUT US</a></li>
+					<li><a href="aboutus" target="_self">BE TREND-E</a></li>
+					<a href="portfolio.html"><li>COMPANIES</li></a>
+					<li class="menupage"><a href="blog.html"><li>BLOG</li></a>
+					<a href="contacts.html"><li>SAY HELLO</li></a>
 				</ul>
 			</div>
 		</nav>
