--- a/templates/index.html
+++ b/templates/index.html
@@ -131,7 +131,7 @@
 			<div class="wrapper">
 				<div class="logo"></div>
 
-				<p class="logotext"> trend-e homepage</br> app </p>	
+				<p class="logotext"> trend-e</br></p>	
 				<ul>
 					<li class="menupage"><a href="/" target="_self">ABOUT US</a></li>
 					<li><a href="aboutus" target="_self">BE TREND-E</a></li>
