Added nav to betrend-e

--- a/templates/index.html
+++ b/templates/index.html
@@ -134,7 +134,7 @@
 				<p class="logotext"> trend-e homepage</br> app </p>	
 				<ul>
 					<li class="menupage"><a href="/" target="_self">ABOUT US</a></li>
-					<li><a href="aboutus" target="_self">BE TREND-E</a></li>
+					<li><a href="betrende" target="_self">BE TREND-E</a></li>
 					<a href="portfolio.html"><li>COMPANIES</li></a>
 					<a href="blog.html"><li>BLOG</li></a>
 					<a href="contacts.html"><li>SAY HELLO</li></a>
