--- a/templates/index.html
+++ b/templates/index.html
@@ -148,7 +148,7 @@
 				    <h2> Description <br> Purpose </h2>
 				    <div class="whoamit1">
 				        <p>
-				            A brief description of our website's goal and vision. Text text text text text
+				            Welcome to trend-e! We can't wait for you to see our final hack. #MHacks 2015 Text text text text text
 				            text text text sample text. Text text text text text
 				            text text text sample text.Text text text text text
 				            text text text sample text.Text text text text text
