--- a/templates/index.html
+++ b/templates/index.html
@@ -145,22 +145,10 @@
 		<header> 
 			<div class="wrapper">
 				<div class="whoami"> 
-				    <h2> Description <br> Purpose </h2>
+				    <h2> welcome to trend-e <br> thanks for stopping by!</h2>
 				    <div class="whoamit1">
 				        <p>
-				            Welcome to trend-e! We can't wait for you to see our final hack. #MHacks 2015 Text text text text text
-				            text text text sample text. Text text text text text
-				            text text text sample text.Text text text text text
-				            text text text sample text.Text text text text text
-				            text text text sample text.Text text text text text
-				            text text text sample text. <br> Text text text text text
-				            text text text sample text.Text text text text text
-				            text text text sample text.Text text text text text
-				            text text text sample text.Text text text text text
-				            text text text sample text.Text text text text text
-				            text text text sample text.Text text text text text
-				            text text text sample text.Text text text text text
-				            text text text sample text.
+				            Welcome to trend-e! We can't wait for you to see our final hack. #MHacks 2015  <br> ..... :)
 				        </p>
 				    </div>
 				</div>
