--- a/templates/index.html
+++ b/templates/index.html
@@ -133,8 +133,8 @@
 
 				<p class="logotext"> trend-e</br></p>	
 				<ul>
-					<li class="menupage"><a href="index.html" target="_self">ABOUT US</a></li>
-					<li><a href="aboutus" target="_self">BE TREND-E</a></li>
+					<li class="menupage"><a href="/" target="_self">ABOUT US</a></li>
+					<li><a href="betrende" target="_self">BE TREND-E</a></li>
 					<a href="portfolio.html"><li>COMPANIES</li></a>
 					<a href="blog.html"><li>BLOG</li></a>
 					<a href="contacts.html"><li>SAY HELLO</li></a>
