--- a/templates/index.html
+++ b/templates/index.html
@@ -131,7 +131,7 @@
 			<div class="wrapper">
 				<div class="logo"></div>
 
-				<p class="logotext"> trend-e</br></p>	
+				<p class="logotext"> <a href="http://tinypic.com?ref=2ag99xd" target="_blank"><img src="http://i57.tinypic.com/2ag99xd.png" border="0" alt="Image and video hosting by TinyPic"></a></br></p>	
 				<ul>
 					<li class="menupage"><a href="/" target="_self">ABOUT US</a></li>
 					<li><a href="betrende" target="_self">BE TREND-E</a></li>
