added nav to trende

--- a/templates/index.html
+++ b/templates/index.html
@@ -134,7 +134,7 @@
 				<p class="logotext"> <a href="http://tinypic.com?ref=2ag99xd" target="_blank"><img src="http://i57.tinypic.com/2ag99xd.png" border="0" alt="Image and video hosting by TinyPic"></a></br></p>	
 				<ul>
 					<li class="menupage"><a href="/" target="_self">ABOUT US</a></li>
-					<li><a href="betrende" target="_self">BE TREND-E</a></li>
+					<li><a href="/betrende" target="_self">BE TREND-E</a></li>
 					<a href="portfolio.html"><li>COMPANIES</li></a>
 					<a href="blog.html"><li>BLOG</li></a>
 					<a href="contacts.html"><li>SAY HELLO</li></a>
