--- a/templates/index.html
+++ b/templates/index.html
@@ -19,6 +19,11 @@
 		  	width: 1200px;
 		}
 
+		.whoamit1 {
+			margin: 0, auto;
+			width: 1200px;
+		}
+
 		nav {
 		  	width:100%;
 		  	height:80px;
@@ -131,7 +136,7 @@
 			<div class="wrapper">
 				<div class="logo"></div>
 
-				<p class="logotext"> <a href="http://tinypic.com?ref=2ag99xd" target="_blank"><img src="http://i57.tinypic.com/2ag99xd.png" border="0" alt="Image and video hosting by TinyPic"></a></br></p>	
+				<p class="logotext"> <a href="http://tinypic.com?ref=2ag99xd" target="_blank"></a></br></p>	
 				<ul>
 					<li class="menupage"><a href="/" target="_self">ABOUT US</a></li>
 					<li><a href="betrende" target="_self">BE TREND-E</a></li>
