--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
 		  	top: 15px;
 		  	width: 50px;
 		  	height: 50px;
-		  	background-image: url("img/final.png");
+		  	
 		}
 
 		.logo:hover {
@@ -136,7 +136,7 @@
 			<div class="wrapper">
 				<div class="logo"></div>
 
-				<p class="logotext"> <a href="http://tinypic.com?ref=2ag99xd" target="_blank"></a></br></p>	
+				<p class="logotext"></br><a href="http://tinypic.com?ref=2ag99xd"></a></p>	
 				<ul>
 					<li class="menupage"><a href="/" target="_self">ABOUT US</a></li>
 					<li><a href="betrende" target="_self">BE TREND-E</a></li>
