--- a/templates/index.html
+++ b/templates/index.html
@@ -136,7 +136,7 @@
 			<div class="wrapper">
 				<div class="logo"></div>
 
-				<p class="logotext"></br><a href="http://tinypic.com?ref=2ag99xd"></a></p>	
+				<a href="http://tinypic.com?ref=2ag99xd">	
 				<ul>
 					<li class="/aboutus"><a href="/" target="_self">ABOUT US</a></li>
 					<li><a href="/betrende" target="_self">BE TREND-E</a></li>
