--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 	<head>
 		<meta charset="utf-8" />
-		<title>My Portfolio</title>
+		<title>welcome to trend-e</title>
 		<link rel="stylesheet" href="style.css">
 		<style> 
 	    	@charset "utf-8";
@@ -138,7 +138,7 @@
 
 				<a href="http://tinypic.com?ref=2ag99xd">	
 				<ul>
-					<li class="/aboutus"><a href="/" target="_self">ABOUT US</a></li>
+					<li class="/home"><a href="/" target="_self">HOME</a></li>
 					<li><a href="/betrende" target="_self">BE TREND-E</a></li>
 					<a href="/companies"><li>COMPANIES</li></a>
 					<a href="/blog"><li>BLOG</li></a>
