--- a/templates/index.html
+++ b/templates/index.html
@@ -136,9 +136,9 @@
 			<div class="wrapper">
 				<div class="logo"></div>
 
-				<a href="http://tinypic.com?ref=2ag99xd">	
+				<a href="http://tinypic.com?ref=2ag99xd"><a>	
 				<ul>
-					<li class="/aboutus"><a href="/" target="_self">ABOUT US</a></li>
+					<li class="/aboutus"><a href="/" target="_self">HOME</li>
 					<li><a href="/betrende" target="_self">BE TREND-E</a></li>
 					<a href="/companies"><li>COMPANIES</li></a>
 					<a href="/blog"><li>BLOG</li></a>
