--- a/templates/companies.html
+++ b/templates/companies.html
@@ -1,1 +1,12 @@
-hello!
+<!doctype html>
+<html lang="eng">
+<head>
+	<body>
+<p>Companies that use trend-e
+text text text text
+text
+text
+text</p>
+	</body>
+		</head>
+</html>
