--- a/templates/index.html
+++ b/templates/index.html
@@ -158,7 +158,7 @@
 				        </p>
 				    </div>
 				</div>
-				<div class="latestworkindex">
+				<div class="latestworkindex"> <a class="twitter-timeline" href="https://twitter.com/trendeapp" data-widget-id="556600329161416706">Tweets by @trendeapp</a> <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 				</div>
 							
 			</div>
