--- a/templates/sayhello.html
+++ b/templates/sayhello.html
@@ -2,8 +2,133 @@
 <html lang="eng">
 	<head>
 		<meta charset="utf-8" />
-		<title>My Portfolio</title>
+		<title>welcome to trend-e</title>
 		<link rel="stylesheet" href="style.css">
+		<style> 
+	    	@charset "utf-8";
+
+			/*reset sheet*/
+			* {
+		  		margin: 0px;
+	 	  		padding: 0px;
+		  		text-decoration: none;
+			}
+
+		.wrapper {
+		  	margin: 0 auto;
+		  	width: 1200px;
+		}
+
+		.whoamit1 {
+			margin: 0, auto;
+			width: 1200px;
+		}
+
+		nav {
+		  	width:100%;
+		  	height:80px;
+		  	border-bottom: 1px solid #cecece; /* Adds a thin grey line to the bottom of the header*/
+		}
+
+		.logo {
+		  	float: left;
+	 	  	position: relative;
+		  	top: 15px;
+		  	width: 50px;
+		  	height: 50px;
+		  	
+		}
+
+		.logo:hover {
+		  	background-position: bottom;
+		}
+
+		.logotext{
+		  	position: relative;
+		  	right: 0px;
+		  	float: left;
+		  	font-family: arial;
+		  	font-size: 20px;
+		  	/* padding is used to move text left and right, margin is for up and down */
+		  	padding-top: 22px;
+		  	line-height: 95%;
+		}
+
+		nav ul {
+		  float: right;
+		}
+
+		nav ul li{
+		  	display: inline-block;
+		  	color: black;	
+		  	font-size: 12px;
+		  	font-family: arial;
+	 	  	height: 80px;
+		  	width: 110px;
+	
+		  	/*fixing the issue of boxes surpassing the boarder*/
+		  	float: left;
+		  	/*centering text in the boxes*/
+			text-align: center;
+			line-height: 700%; 
+			/*list style prevents the website from srewing up the navigation portion of the site*/
+			list-style: none;	 
+		}
+
+		nav ul li:hover{
+			background-color: #f2f2f2;	 
+		}
+
+		.menupage {
+			background-color: #f2f2f2;
+ 			color: orange;
+		}
+
+		header {
+    		height:590px;
+    		width:100%;
+    		background-color:white;
+		}
+
+		.whoami{
+    		margin-top:80px;
+    		height: 420px;
+    		width: 55%;
+    		background-color:black;
+    		float: left;
+		}
+
+		.latestworkindex{
+    		margin-top:80px;
+    		height: 420px;
+    		width: 40%;
+    		background-color:grey;
+    		float: right;
+		}
+
+		/* Description purpose*/
+		.whoami h2{
+     		font-family: arial;
+    		color: white;
+     		font-size: 65   px;
+		}
+
+		.whoamit1{
+      		width: 55%;
+      		height: 200px;
+      		font-family: arial;
+      		color: white;       
+      		border-right: solid 1px white;
+		}
+
+		.whoamit1 p{
+      		font-family: arial;
+      		font-size: 14px;
+		}
+    
+
+		</style>
+	
 	</head>
 
 	<body>
@@ -11,19 +136,31 @@
 			<div class="wrapper">
 				<div class="logo"></div>
 
-				<p class="logotext"> trend-e homepage</br> app </p>	
+				<a href="http://tinypic.com?ref=2ag99xd"><a>	
 				<ul>
-					<a href="/" target="_self">ABOUT US</a></li>
-					<li><a href="aboutus" target="_self">BE TREND-E</a></li>
-					<a href="portfolio.html"><li>COMPANIES</li></a>
-					<a href="blog.html"><li>BLOG</li></a>
-					<li class="menupage"><a href="contacts.html"><li>SAY HELLO</li></a>
+					<li class="/aboutus"><a href="/" target="_self">HOME</li>
+
+					<li><a href="/betrende" target="_self">BE TREND-E</a></li>
+					<a href="/companies"><li>COMPANIES</li></a>
+					<a href="/blog"><li>BLOG</li></a>
+					<a href="/sayhello"><li>SAY HELLO</li></a>
 				</ul>
 			</div>
 		</nav>
 
 		<header> 
-			<div class="wrapper"></div>
+			<div class="wrapper">
+				<div class="whoami"> 
+				    <h2> welcome to trend-e <br> thanks for stopping by!</h2>
+				    <div class="whoamit1">
+				        <p>
+				           Say Hello
+				        </p>
+				    </div>
+				</div>
+				
+							
+			</div>
 		</header>
 
 		<section>
