--- a/templates/companies.html
+++ b/templates/companies.html
@@ -1,12 +1,138 @@
 <!doctype html>
 <html lang="eng">
-<head>
+	<head>
+		<meta charset="utf-8" />
+		<title>welcome to trend-e</title>
+		<link rel="stylesheet" href="style.css">
+		<style> 
+	    	@charset "utf-8";
+
+			/*reset sheet*/
+			* {
+		  		margin: 0px;
+	 	  		padding: 0px;
+		  		text-decoration: none;
+			}
+
+		.wrapper {
+		  	margin: 0 auto;
+		  	width: 1200px;
+		}
+
+		.whoamit1 {
+			margin: 0, auto;
+			width: 1200px;
+		}
+
+		nav {
+		  	width:100%;
+		  	height:80px;
+		  	border-bottom: 1px solid #cecece; /* Adds a thin grey line to the bottom of the header*/
+		}
+
+		.logo {
+		  	float: left;
+	 	  	position: relative;
+		  	top: 15px;
+		  	width: 50px;
+		  	height: 50px;
+		  	
+		}
+
+		.logo:hover {
+		  	background-position: bottom;
+		}
+
+		.logotext{
+		  	position: relative;
+		  	right: 0px;
+		  	float: left;
+		  	font-family: arial;
+		  	font-size: 20px;
+		  	/* padding is used to move text left and right, margin is for up and down */
+		  	padding-top: 22px;
+		  	line-height: 95%;
+		}
+
+		nav ul {
+		  float: right;
+		}
+
+		nav ul li{
+		  	display: inline-block;
+		  	color: black;	
+		  	font-size: 12px;
+		  	font-family: arial;
+	 	  	height: 80px;
+		  	width: 110px;
+	
+		  	/*fixing the issue of boxes surpassing the boarder*/
+		  	float: left;
+		  	/*centering text in the boxes*/
+			text-align: center;
+			line-height: 700%; 
+			/*list style prevents the website from srewing up the navigation portion of the site*/
+			list-style: none;	 
+		}
+
+		nav ul li:hover{
+			background-color: #f2f2f2;	 
+		}
+
+		.menupage {
+			background-color: #f2f2f2;
+ 			color: orange;
+		}
+
+		header {
+    		height:590px;
+    		width:100%;
+    
+    
+
+		</style>
+	
+	</head>
+
 	<body>
-<p>Companies that use trend-e
-text text text text
-text
-text
-text</p>
+		<nav>
+			<div class="wrapper">
+				<div class="logo"></div>
+
+				<a href="http://tinypic.com?ref=2ag99xd"><a>	
+				<ul>
+					<li class="/aboutus"><a href="/" target="_self">HOME</li>
+
+					<li><a href="/betrende" target="_self">BE TREND-E</a></li>
+					<a href="/companies"><li>COMPANIES</li></a>
+					<a href="/blog"><li>BLOG</li></a>
+					<a href="/sayhello"><li>SAY HELLO</li></a>
+				</ul>
+			</div>
+		</nav>
+
+		<header> 
+			<div class="wrapper">
+				<div class="whoami"> 
+				    <h2> Say Hello!</h2>
+				    <div class="whoamit1">
+				        <p>
+				           Say Hello!
+				        </p>
+				    </div>
+				</div>
+				
+							
+			</div>
+		</header>
+
+		<section>
+			<div class="wrapper"></div>
+		</section>
+
+		<footer>
+			<div class="wrapper"></div>
+		</footer>		
+
 	</body>
-		</head>
 </html>
