--- a/templates/index.html
+++ b/templates/index.html
@@ -14,6 +14,10 @@
 		  		text-decoration: none;
 			}
 
+		.twitter-timeline{
+			padding: 0px;
+			
+		}
 		.wrapper {
 		  	margin: 0 auto;
 		  	width: 1200px;
