--- a/templates/sayhello.html
+++ b/templates/sayhello.html
@@ -8,7 +8,7 @@
 	    	@charset "utf-8";
 
 			/*reset sheet*/
-			* {
+				* {
 		  		margin: 0px;
 	 	  		padding: 0px;
 		  		text-decoration: none;
@@ -30,18 +30,19 @@
 		  	border-bottom: 1px solid #cecece; /* Adds a thin grey line to the bottom of the header*/
 		}
 
-		.logo {
-		  	float: left;
-	 	  	position: relative;
-		  	top: 15px;
-		  	width: 50px;
-		  	height: 50px;
-		  	
-		}
 
-		.logo:hover {
-		  	background-position: bottom;
-		}
+	    .logo {
+	    float: left;
+	    position: relative;
+	    top: 15px;
+	    width: 80px;
+	    height: 80px;
+    	background-image: url("img/trend-e_combined.png");
+        }
+
+        .logo:hover {
+	        background-position: bottom;
+        }
 
 		.logotext{
 		  	position: relative;
@@ -87,44 +88,18 @@
 		header {
     		height:590px;
     		width:100%;
+
     		background-color:white;
 		}
 
-		.whoami{
-    		margin-top:80px;
-    		height: 420px;
-    		width: 55%;
-    		background-color:black;
+		.betrendebanner{
+    		margin-top:50px;
+    		height: 490px;
+    		width: 100%;
+    		background-color: #C6C6C6;
     		float: left;
 		}
 
-		.latestworkindex{
-    		margin-top:80px;
-    		height: 420px;
-    		width: 40%;
-    		background-color:grey;
-    		float: right;
-		}
-
-		/* Description purpose*/
-		.whoami h2{
-     		font-family: arial;
-    		color: white;
-     		font-size: 65   px;
-		}
-
-		.whoamit1{
-      		width: 55%;
-      		height: 200px;
-      		font-family: arial;
-      		color: white;       
-      		border-right: solid 1px white;
-		}
-
-		.whoamit1 p{
-      		font-family: arial;
-      		font-size: 14px;
-		}
     
 
 		</style>
@@ -151,10 +126,10 @@
 		<header> 
 			<div class="wrapper">
 				<div class="whoami"> 
-				    <h2> welcome to trend-e <br> thanks for stopping by!</h2>
+				    <h2> Say Hello!</h2>
 				    <div class="whoamit1">
 				        <p>
-				           Say Hello
+				           Say Hello!
 				        </p>
 				    </div>
 				</div>
