--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -114,19 +114,18 @@
 		</nav>
 
 		<header> 
+				<header> 
 			<div class="wrapper">
-				<div class="whoami"> 
-				    <h2> welcome to trend-e <br> thanks for stopping by!</h2>
-				    <div class="whoamit1">
-				        <p>
-				            About us
-				        </p>
-				    </div>
+
+				<div class="betrendebanner"> 
+				    <h2> BE TREND-E</h2>
 				</div>
-				
-							
+
 			</div>
 		</header>
+				        
+							
+		
 
 		<section>
 			<div class="wrapper"></div>
