--- a/templates/betrende.html
+++ b/templates/betrende.html
@@ -112,9 +112,8 @@
 
 				<a href="http://tinypic.com?ref=2ag99xd"><a>	
 				<ul>
-					<li class="/aboutus"><a href="/" target="_self">HOME</li>
-
-					<li><a href="/betrende" target="_self">BE TREND-E</a></li>
+					<a href="/" target="_self"><li>HOME</li></a>
+					<a href="/betrende" target="_self"><li class="menupage">BE TREND-E</li></a>
 					<a href="/companies"><li>COMPANIES</li></a>
 					<a href="/blog"><li>BLOG</li></a>
 					<a href="/sayhello"><li>SAY HELLO</li></a>
