--- a/templates/index.html
+++ b/templates/index.html
@@ -137,6 +137,14 @@
       		font-family: arial;
       		font-size: 14px;
 		}
+
+		.textbox {
+			margin-top:60px;
+    		height: 380px;
+    		width: 50%;
+    		background-color:white;
+    		float: left;
+		}
     
 
 		</style>
@@ -165,9 +173,9 @@
 				    <h2> welcome to trend-e <br> thanks for stopping by!</h2>
 				    <div class="whoamit1">
 				        <p>
-				            <textarea cols="380" rows="60">
+				          <li class="textbox">  <textarea cols="380" rows="60">
 Welcome to trend-e! We can't wait for you to see our final hack. #MHacks 2015  <br> ..... :)
-</textarea>
+</textarea></li>
 
 				        </p>
 				    </div>
