--- a/templates/index.html
+++ b/templates/index.html
@@ -173,9 +173,8 @@
 				    <h2> welcome to trend-e <br> thanks for stopping by!</h2>
 				    <div class="whoamit1">
 				        <p>
-				          <li class="textbox">  <textarea cols="380" rows="60">
-Welcome to trend-e! We can't wait for you to see our final hack. #MHacks 2015  <br> ..... :)
-</textarea></li>
+				         
+Welcome to trend-e! We can't wait for you to see our final hack. #MHacks 2015..... :)
 
 				        </p>
 				    </div>
