--- a/templates/index.html
+++ b/templates/index.html
@@ -173,6 +173,13 @@
 				    <h2> welcome to trend-e <br> thanks for stopping by!</h2>
 				    <div class="whoamit1">
 				        <p>
+				        	<form action="/html/tags/html_form_tag_action.cfm" method="post">
+Comments:<br />
+  <textarea name="comments" id="comments" style="width:420px;height:70px;background-color:#808080;">
+  Hey... say something!
+  </textarea><br />
+  <input type="submit" value="Submit" />
+</form>
 				         
 Welcome to trend-e! We can't wait for you to see our final hack. #MHacks 2015..... :)
 
