--- a/templates/index.html
+++ b/templates/index.html
@@ -176,12 +176,11 @@
 				        	<form action="/html/tags/html_form_tag_action.cfm" method="post">
 Comments:<br />
   <textarea name="comments" id="comments" style="width:420px;height:70px;background-color:#808080;">
-  Hey... say something!
+  Welcome to trend-e! We can't wait for you to see our final hack #MHacks 
   </textarea><br />
-  <input type="submit" value="Submit" />
 </form>
 				         
-Welcome to trend-e! We can't wait for you to see our final hack. #MHacks 2015..... :)
+
 
 				        </p>
 				    </div>
