--- a/templates/index.html
+++ b/templates/index.html
@@ -170,14 +170,14 @@
 		<header> 
 			<div class="wrapper">
 				<div class="whoami"> 
-				    <h2> welcome to trend-e <br> thanks for stopping by!</h2>
+				    <h2> welcome to trend-e <br></h2>
 				    <div class="whoamit1">
 				        <p>
 				        	<form action="/html/tags/html_form_tag_action.cfm" method="post">
-Comments:<br />
-  <textarea name="comments" id="comments" style="width:420px;height:70px;background-color:#808080;">
+Comments:<br/>
+  <textarea name="comments" id="" style="width:420px;height:70px;background-color:#808080;">
   Welcome to trend-e! We can't wait for you to see our final hack #MHacks 
-  </textarea><br />
+  </textarea><br/>
 </form>
 				         
 
