--- a/templates/index.html
+++ b/templates/index.html
@@ -175,7 +175,7 @@
 				        <p>
 				        	<form action="/html/tags/html_form_tag_action.cfm" method="post">
 Comments:<br/>
-  <textarea name="comments" id="" style="width:420px;height:70px;background-color:#808080;">
+  <textarea id="" style="width:420px;height:70px;background-color:#808080;">
   Welcome to trend-e! We can't wait for you to see our final hack #MHacks 
   </textarea><br/>
 </form>
