--- a/templates/index.html
+++ b/templates/index.html
@@ -167,7 +167,7 @@
 				        <p>
 				        	<form action="/html/tags/html_form_tag_action.cfm" method="post">
 <br/>
-  <textarea id="" style="width:420px;height:70px;background-color:#808080;">
+  <textarea id="" style="width:420px;height:70px;background-color:#808080;" "border-style:none;">
   Welcome to trend-e! We can't wait for you to see our final hack #MHacks 
   </textarea><br/>
 </form>
