--- a/templates/index.html
+++ b/templates/index.html
@@ -131,11 +131,12 @@
 		}
 
 		.textbox {
-			margin-top:60px;
-    		height: 380px;
-    		width: 50%;
-    		background-color:white;
-    		float: left;
+			margin-top:7px;
+    		height: 364.5px;
+    		width: 49.85%;
+    		background-color:#808080;
+    		float: center;
+    		resize: none;
 		}
     
 
@@ -167,7 +168,7 @@
 				        <p>
 				        	<form action="/html/tags/html_form_tag_action.cfm" method="post">
 <br/>
-  <textarea id="" style="width:420px;height:70px;background-color:#808080;" "border-style:none;">
+  <textarea class="textbox">
   Welcome to trend-e! We can't wait for you to see our final hack #MHacks 
   </textarea><br/>
 </form>
