--- a/templates/companies.html
+++ b/templates/companies.html
@@ -80,7 +80,7 @@
 			background-color: #f2f2f2;	 
 		}
 
-		.companiesbutton {
+		.buytrendebutton {
 			background-color: #f2f2f2;
  			color: black;
 		}
@@ -114,7 +114,7 @@
 				<ul>
 					<a href="/" target="_self"><li>HOME</li></a>
 					<a href="/betrende" target="_self"><li>BE TREND-E</li></a>
-					<a href="/buytrende"><li class="companiesbutton">BUY TREND-E</li></a>
+					<a href="/buytrende"><li class="buytrendebutton">BUY TREND-E</li></a>
 					<a href="/blog"><li>BLOG</li></a>
 					<a href="/sayhello"><li>SAY HELLO</a>
 				</ul>
