--- a/templates/buytrende.html
+++ b/templates/buytrende.html
@@ -141,7 +141,7 @@
 				<ul>
 					<a href="/" target="_self"><li class="menupage">HOME</li></a>
 					<a href="/betrende" target="_self"><li>BE TREND-E</li></a>
-					<a href="/companies"><li>COMPANIES</li></a>
+					<a href="/buytrende"><li>BUY TREND-E</li></a>
 					<a href="/blog"><li>BLOG</li></a>
 					<a href="/sayhello"><li>SAY HELLO</li></a>
 				</ul>
