--- a/templates/index.html
+++ b/templates/index.html
@@ -85,7 +85,7 @@
 
 		.menupage {
 			background-color: #f2f2f2;
- 			color: orange;
+ 			color: black;
 		}
 
 		header {
@@ -153,7 +153,7 @@
 				<ul>
 					<a href="/" target="_self"><li class="menupage">HOME</li></a>
 					<a href="/betrende" target="_self"><li>BE TREND-E</li></a>
-					<a href="/companies"><li>COMPANIES</li></a>
+					<a href="/buytrende"><li>BUY TREND-E</li></a>
 					<a href="/blog"><li>BLOG</li></a>
 					<a href="/sayhello"><li>SAY HELLO</li></a>
 				</ul>
