--- a/templates/buytrende.html
+++ b/templates/buytrende.html
@@ -139,7 +139,7 @@
 
 				<a href="http://tinypic.com?ref=2ag99xd"><a>	
 				<ul>
-					<a href="/" target="_self"><li class="menupage">HOME</li></a>
+					<a href="/home" target="_self"><li class="menupage">HOME</li></a>
 					<a href="/betrende" target="_self"><li>BE TREND-E</li></a>
 					<a href="/buytrende"><li>BUY TREND-E</li></a>
 					<a href="/blog"><li>BLOG</li></a>
