--- a/templates/sayhello.html
+++ b/templates/sayhello.html
@@ -115,7 +115,7 @@
 				<ul>
 					<a href="/" target="_self"><li>HOME</li></a>
 					<a href="/betrende" target="_self"><li>BE TREND-E</li></a>
-					<a href="/companies"><li>COMPANIES</li></a>
+					<a href="/buytrende"><li>BUY TREND-E</li></a>
 					<a href="/blog"><li>BLOG</li></a>
 					<a href="/sayhello"><li class="sayhellobutton">SAY HELLO</a>
 				</ul>
