--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -112,7 +112,7 @@
 
 				<a href="http://tinypic.com?ref=2ag99xd"><a>	
 				<ul>
-					<li class="/aboutus"><a href="/" target="_self">HOME</li>
+					<li class="/home"><a href="/" target="_self">HOME</li>
 
 					<li><a href="/betrende" target="_self">BE TREND-E</a></li>
 					<a href="/companies"><li>COMPANIES</li></a>
