--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -115,7 +115,7 @@
 					<li class="/home"><a href="/" target="_self">HOME</li>
 
 					<li><a href="/betrende" target="_self">BE TREND-E</a></li>
-					<a href="/companies"><li>COMPANIES</li></a>
+					<a href="/buytrende"><li>BUY TREND-E</li></a>
 					<a href="/blog"><li>BLOG</li></a>
 					<a href="/sayhello"><li>SAY HELLO</li></a>
 				</ul>
