--- a/templates/betrende.html
+++ b/templates/betrende.html
@@ -1,58 +1,14 @@
 <!doctype html>
 <html lang="eng">
 	<head>
-		 <meta charset="utf-8" name="ROBOTS" content="NOINDEX, NOFOLLOW"/>		<title>welcome to trend-e</title>
+		<meta charset="utf-8" />
+		<title>buy trend-e</title>
 		<link rel="stylesheet" href="style.css">
-		<script src="jquery-2.1.3.min.js"></script>
-	    <style>
-	        #tfheader{
-		background-color:#c3dfef;
-	}
-	#tfnewsearch{
-		float:right;
-		padding:20px;
-	}
-	
-	.tftextinput2{
-		margin: 0;
-		float: left;
-		padding: 5px 15px;
-		font-family: Arial, Helvetica, sans-serif;
-		font-size:18px;
-		color:#0000;
-		text-decoration: none; 
-			}
-	.tfbutton2 {
-		
-        
-		font-family: Arial, Helvetica, sans-serif;
-		font-size:14px;
-		font-weight:bold;
-		outline: none;
+		<style> 
+	    	@charset "utf-8";
 
-		text-align: left;
-		text-decoration: none;
-		color: #0000;
-		border: solid 1px #0000; border-right:0px;
-		background: #0000;
-		border-top-right-radius: 5px 5px;
-		border-bottom-right-radius: 5px 5px;
-	}
-	.tfbutton2:hover {
-		text-decoration: none;
-		background: #0000;
-		background: -webkit-gradient(linear, left top, left bottom, from(#0095cc), to(#00678e));
-		background: -moz-linear-gradient(top,  #0095cc,  #00678e);
-	}
-	/* Fixes submit button height problem in Firefox */
-	.tfbutton2::-moz-focus-inner {
-	  border: 0;
-	}
-	.tfclear{
-		clear:both;
-	}     
 			/*reset sheet*/
-			* {
+				* {
 		  		margin: 0px;
 	 	  		padding: 0px;
 		  		text-decoration: none;
@@ -124,7 +80,7 @@
 			background-color: #f2f2f2;	 
 		}
 
-		.menupage {
+		.sayhellobutton {
 			background-color: #f2f2f2;
  			color: orange;
 		}
@@ -136,9 +92,10 @@
     		background-color:white;
 		}
 
-		.betrendebanner{
+
+		.sayhellobanner{
     		margin-top:50px;
-            overflow:hidden;
+    		height: 490px;
     		width: 100%;
     		background-color: #C6C6C6;
     		float: left;
@@ -150,19 +107,17 @@
 	</head>
 
 	<body>
-	   
-	
 		<nav>
 			<div class="wrapper">
 				<div class="logo"></div>
 
 				<a href="http://tinypic.com?ref=2ag99xd"><a>	
 				<ul>
-					<a href="/" target="_self"><li>HOME</li></a>
-					<a href="/betrende" target="_self"><li class="menupage">BE TREND-E</li></a>
-					<a href="/companies"><li>COMPANIES</li></a>
+					<a href="/home" target="_self"><li>HOME</li></a>
+					<a href="/betrende" target="_self"><li>BE TREND-E</li></a>
+					<a href="/buytrende"><li>BUY TREND-E</li></a>
 					<a href="/blog"><li>BLOG</li></a>
-					<a href="/sayhello"><li>SAY HELLO</li></a>
+					<a href="/sayhello"><li class="sayhellobutton">SAY HELLO</a>
 				</ul>
 			</div>
 		</nav>
@@ -170,56 +125,22 @@
 		<header> 
 			<div class="wrapper">
 
-				<div id="ebayTrend"class="betrendebanner"> 
+
+				<div class="sayhellobanner"> 
 				    <h2> BE TREND-E</h2>
-				    <script > 
-	        // Parse the response and build an HTML table to display search results
-            function _cb_findItemsByKeywords(root) {
-                var items = root.findItemsByKeywordsResponse[0].searchResult[0].item || [];
-                 var html = [];
-                html.push('<table width="100%" border="0" cellspacing="0" cellpadding="3"><tbody>');
-                for (var i = 0; i < items.length; ++i) {
-                    var item     = items[i];
-                    var title    = item.title;
-                    var pic      = item.galleryURL;
-                    var viewitem = item.viewItemURL;
-                    if (null != title && null != viewitem) {
-                    html.push('<tr><td>' + '<img src="' + pic + '" border="0">' + '</td>' +
-                    '<td><a href="' + viewitem + '" target="_blank">' + title + '</a></td></tr>');
-                    }
-                }
-                html.push('</tbody></table>');
-                document.getElementById("ebayTrend").innerHTML = html.join("");
-            }   // End _cb_findItemsByKeywords() function
-	        var url = "http://svcs.ebay.com/services/search/FindingService/v1";
-                url += "?OPERATION-NAME=findItemsByKeywords";
-                url += "&SERVICE-VERSION=1.0.0";
-                url += "&SECURITY-APPNAME=None87771-a335-4d69-8140-ef6acead557";
-                url += "&GLOBAL-ID=EBAY-US";
-                url += "&RESPONSE-DATA-FORMAT=JSON";
-                url += "&callback=_cb_findItemsByKeywords";
-                url += "&REST-PAYLOAD";
-                url += "&keywords=cardigan";
-                url += "&paginationInput.entriesPerPage=10";
-                // Submit the request
-                s=document.createElement('script'); // create script element
-                s.src= url;
-                document.body.appendChild(s);
-	    </script>
+
 				</div>
 
 			</div>
 		</header>
 
 		<section>
-            
+			<div class="wrapper"></div>
 		</section>
 
 		<footer>
 			<div class="wrapper"></div>
-		</footer>	
-		
-		
+		</footer>		
 
 	</body>
 </html>
