--- a/templates/buytrende.html
+++ b/templates/buytrende.html
@@ -110,14 +110,13 @@
 			<div class="wrapper">
 				<div class="logo"></div>
 
-				<a href="http://tinypic.com?ref=2ag99xd"><a>	
+					<a href="http://tinypic.com?ref=2ag99xd"><a>	
 				<ul>
-					<li class="/home"><a href="/" target="_self">HOME</li>
-
-					<li><a href="/betrende" target="_self">BE TREND-E</a></li>
-					<a href="/buytrende"><li>BUY TREND-E</li></a>
+					<a href="/home" target="_self"><li>HOME</li></a>
+					<a href="/betrende" target="_self"><li>BE TREND-E</li></a>
+					<a href="/buytrende"><li class="buytrendebutton">BUY TREND-E</li></a>
 					<a href="/blog"><li>BLOG</li></a>
-					<a href="/sayhello"><li>SAY HELLO</li></a>
+					<a href="/sayhello"><li>SAY HELLO</a>
 				</ul>
 			</div>
 		</nav>
