--- a/templates/blog.html
+++ b/templates/blog.html
@@ -112,7 +112,7 @@
 
 				<a href="http://tinypic.com?ref=2ag99xd"><a>	
 				<ul>
-					<a href="/home" target="_self"><li>HOME</li><a>
+					<a href="/" target="_self"><li>HOME</li><a>
 					<a href="/betrende" target="_self"><li>BE TREND-E</li></a>
 					<a href="/buytrende"><li>BUY TREND-E</li></a>
 					<a href="/blog"><li class="blogbutton">BLOG</li></a>
