--- a/templates/buytrende.html
+++ b/templates/buytrende.html
@@ -30,6 +30,10 @@
 		  	border-bottom: 1px solid #cecece; /* Adds a thin grey line to the bottom of the header*/
 		}
 
+		.menupage {
+      		background-color: #f2f2f2;
+      		color: orange;
+    	}
 
 	    .logo {
 	    float: left;
@@ -112,9 +116,9 @@
 
 					<a href="http://tinypic.com?ref=2ag99xd"><a>	
 				<ul>
-					<a href="/home" target="_self"><li>HOME</li></a>
+					<a href="/" target="_self"><li>HOME</li></a>
 					<a href="/betrende" target="_self"><li>BE TREND-E</li></a>
-					<a href="/buytrende"><li class="buytrendebutton">BUY TREND-E</li></a>
+					<a href="/buytrende"><li class="menupage">BUY TREND-E</li></a>
 					<a href="/blog"><li>BLOG</li></a>
 					<a href="/sayhello"><li>SAY HELLO</a>
 				</ul>
