all orange text when selected

--- a/templates/sayhello.html
+++ b/templates/sayhello.html
@@ -117,7 +117,7 @@
 					<a href="/betrende" target="_self"><li>BE TREND-E</li></a>
 					<a href="/buytrende"><li>BUY TREND-E</li></a>
 					<a href="/blog"><li>BLOG</li></a>
-					<a href="/sayhello"><li class="sayhellobutton">SAY HELLO</a>
+					<a href="/sayhello"><li class="sayhellobutton">SAY HELLO</li></a>
 				</ul>
 			</div>
 		</nav>
