--- a/templates/sayhello.html
+++ b/templates/sayhello.html
@@ -4,6 +4,9 @@
 		<meta charset="utf-8" />
 		<title>welcome to trend-e</title>
 		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		<style> 
 	    	@charset "utf-8";
 
@@ -126,13 +129,17 @@
 			<div class="wrapper">
 
 
-				<div class="sayhellobanner"> 
-				    <h2> Say hello!</h2></br>
-				    <p>Trend-e was developed by Meghan Maloney, Shannon Maloney,
-				    Pedro Sorto, and Jonathan Perry.</p></br>
-
+				<div class="sayhellobanner">
+					<div class="panel panel-default">
+            			<div class="panel-body">
+            				<h2> Say hello!</h2></br>
+				    		<p>Trend-e was developed by Meghan Maloney, Shannon Maloney,
+				    		Pedro Sorto, and <a href="http://jonperry.heroku.com"
+				    		target="_blank">Jonathan Perry</a>.</p></br>
+				    		<p>Feel free to contact us at trendeapp@gmail.com</p></br>
+            			</div>
+          			</div>
 				</div>
-
 			</div>
 		</header>
 
