--- a/templates/blog.html
+++ b/templates/blog.html
@@ -2,7 +2,7 @@
 <html lang="eng">
 	<head>
 		<meta charset="utf-8" />
-		<title>welcome to trend-e</title>
+		<title>wblog </title>
 		<link rel="stylesheet" href="style.css">
 		<style> 
 	    	@charset "utf-8";
@@ -124,9 +124,18 @@
 		<header> 
 			<div class="wrapper">
 
-				<div class="blogbanner"> 
-				    <h2> BE TREND-E</h2>
+				<div class="blog banner">
+					<div class="panel panel-default">
+            			<div class="panel-body">
+            				<h2> The Blog </h2></br>
+				    		<p>Trend-e was developed by Meghan Maloney, Shannon Maloney,
+				    		Pedro Sorto, and <a href="http://jonperry.heroku.com"
+				    		target="_blank">Jonathan Perry</a>.</p></br>
+				    		<p>We can't wait for our next hackathon! Cheers, The trend-e app Team </p></br>
+            			</div>
+          			</div>
 				</div>
+			</div>
 
 			</div>
 		</header>
