--- a/templates/blog.html
+++ b/templates/blog.html
@@ -2,13 +2,16 @@
 <html lang="eng">
 	<head>
 		<meta charset="utf-8" />
-		<title>wblog </title>
+		<title>welcome to trend-e</title>
 		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+  		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
 		<style> 
 	    	@charset "utf-8";
 
 			/*reset sheet*/
-			* {
+				* {
 		  		margin: 0px;
 	 	  		padding: 0px;
 		  		text-decoration: none;
@@ -17,11 +20,6 @@
 		.wrapper {
 		  	margin: 0 auto;
 		  	width: 1200px;
-		}
-
-		.whoamit1 {
-			margin: 0, auto;
-			width: 1200px;
 		}
 
 		nav {
@@ -128,9 +126,7 @@
 					<div class="panel panel-default">
             			<div class="panel-body">
             				<h2> The Blog </h2></br>
-				    		<p>Trend-e was developed by Meghan Maloney, Shannon Maloney,
-				    		Pedro Sorto, and <a href="http://jonperry.heroku.com"
-				    		target="_blank">Jonathan Perry</a>.</p></br>
+				    		<p> MHacks V gave us the opportunity to build a cool website, meet new friends, and most importantly, learn. We wanted to thank everyone involved in hosting a great hackathon including the MHacks V team, the sponsors, and most importantly, the hackers that made MHacks V a hackathon for the books. </p></br>
 				    		<p>We can't wait for our next hackathon! Cheers, The trend-e app Team </p></br>
             			</div>
           			</div>
