Fixed blog formatting

--- a/templates/blog.html
+++ b/templates/blog.html
@@ -122,7 +122,7 @@
 		<header> 
 			<div class="wrapper">
 
-				<div class="blog banner">
+				<div class="blogbanner">
 					<div class="panel panel-default">
             			<div class="panel-body">
             				<h2> The Blog </h2></br>
@@ -130,9 +130,13 @@
 				    		<p>We can't wait for our next hackathon! Cheers, The trend-e app Team </p></br>
             			</div>
           			</div>
+          			<div class="panel panel-default">
+            			<div class="panel-body">
+            				<h2>Sample Blog Post</h2></br>
+            				<p>Another blog post</p></br>
+            			</div>
+            		</div>
 				</div>
-			</div>
-
 			</div>
 		</header>
 
