updated blog and sayhello pages

--- a/templates/sayhello.html
+++ b/templates/sayhello.html
@@ -22,6 +22,11 @@
 		  	width: 1200px;
 		}
 
+		h1 {
+			text-align: center;
+			font-family: arial;
+		}
+
 		.whoamit1 {
 			margin: 0, auto;
 			width: 1200px;
@@ -97,7 +102,7 @@
 
 
 		.sayhellobanner{
-    		margin-top:50px;
+    		margin-top:10px;
     		height: 490px;
     		width: 100%;
     		background-color: #C6C6C6;
@@ -125,6 +130,8 @@
 			</div>
 		</nav>
 
+		<h1>Say hello!</h1>
+
 		<header> 
 			<div class="wrapper">
 
@@ -132,7 +139,6 @@
 				<div class="sayhellobanner">
 					<div class="panel panel-default">
             			<div class="panel-body">
-            				<h2> Say hello!</h2></br>
 				    		<p>Trend-e was developed by Meghan Maloney, Shannon Maloney,
 				    		Pedro Sorto, and <a href="http://jonperry.heroku.com"
 				    		target="_blank">Jonathan Perry</a>.</p></br>
