--- a/templates/blog.html
+++ b/templates/blog.html
@@ -22,6 +22,10 @@
 		  	width: 1200px;
 		}
 
+		h1 {
+			text-align: center;
+		}
+
 		nav {
 		  	width:100%;
 		  	height:80px;
@@ -91,7 +95,7 @@
 		}
 
 		.blogbanner{
-    		margin-top:50px;
+    		margin-top:10px;
     		height: 490px;
     		width: 100%;
     		background-color: #C6C6C6;
@@ -119,7 +123,9 @@
 			</div>
 		</nav>
 
-		<header> 
+		<h1>THE BLOG</h1>
+
+		<header>
 			<div class="wrapper">
 
 				<div class="blogbanner">
