--- a/templates/index.html
+++ b/templates/index.html
@@ -163,13 +163,18 @@
 		<header> 
 			<div class="wrapper">
 				<div class="whoami"> 
-				    <h2> welcome to trend-e <br></h2>
+				    <h2> welcome to trend-e!<br></h2>
 				    <div class="whoamit1">
 				        <p>
 				        	<form action="/html/tags/html_form_tag_action.cfm" method="post">
 <br/>
   <textarea class="textbox">
-  Welcome to trend-e! We can't wait for you to see our final hack #MHacks 
+  	<div class="whoami"> 
+				    <h2> welcome to trend-e!<br>trend-e curates the current trendiest items and allows you to shop these items b</h2>
+				    <div class="whoamit1">
+				        <p>
+				        	<form action="/html/tags/html_form_tag_action.cfm" method="post">
+  
   </textarea><br/>
 </form>
 				         
