--- a/templates/index.html
+++ b/templates/index.html
@@ -169,12 +169,9 @@
 				        	<form action="/html/tags/html_form_tag_action.cfm" method="post">
 <br/>
   <textarea class="textbox">
-  	<div class="whoami"> 
-				    <h2> welcome to trend-e!<br>trend-e curates the current trendiest items and allows you to shop these items b</h2>
+ welcome to trend-e! trend-e curates the trendiest items and allows you to browse and then be linked to these items directly from our website! Stay trend-e!
 				    <div class="whoamit1">
 				        <p>
-				        	<form action="/html/tags/html_form_tag_action.cfm" method="post">
-  
   </textarea><br/>
 </form>
 				         
