--- a/templates/index.html
+++ b/templates/index.html
@@ -169,9 +169,7 @@
 				        	<form action="/html/tags/html_form_tag_action.cfm" method="post">
 <br/>
   <textarea class="textbox">
- welcome to trend-e! trend-e curates the trendiest items and allows you to browse and then be linked to these items directly from our website! Stay trend-e!
-				    <div class="whoamit1">
-				        <p>
+trend-e curates the trendiest items and allows you to browse these items directly from our website. Stay trend-e!
   </textarea><br/>
 </form>
 				         
