--- a/templates/index.html
+++ b/templates/index.html
@@ -169,7 +169,7 @@
 				        	<form action="/html/tags/html_form_tag_action.cfm" method="post">
 <br/>
   <textarea class="textbox">
-trend-e curates the trendiest items and allows you to browse these items directly from our website. Stay trend-e!
+trend-e curates the trendiest items from ebay and allows you to browse and be linked to the items directly from our website. Click the buy trend-e button above to get started! 
   </textarea><br/>
 </form>
 				         
