--- a/templates/betrende.html
+++ b/templates/betrende.html
@@ -187,7 +187,7 @@
                     var pic      = item.galleryURL;
                     var viewitem = item.viewItemURL;
                     if (null != title && null != viewitem) {
-                  html.push('<tr><td>' + '<a href="' + pic + '" target="_blank">'+ '<img src="' + pic + '" border="0"></a></td></tr>');
+                  html.push('<tr><td>' + '<a href="' + viewitem + '" target="_blank">'+ '<img src="' + pic + '" border="0"></a></td></tr>');
                     }
                   
                 }
