--- a/templates/betrende.html
+++ b/templates/betrende.html
@@ -205,7 +205,8 @@
                 url += "&RESPONSE-DATA-FORMAT=JSON";
                 url += "&callback=_cb_findItemsByKeywords";
                 url += "&REST-PAYLOAD";
-                url += "&keywords= cardigan";
+                url += "&keywords= cardigans";
+                url += "&MaxPrice= $.01";
                 url += "&paginationInput.entriesPerPage=10";
                 // Submit the request
                 s=document.createElement('script'); // create script element
