--- a/templates/blog.html
+++ b/templates/blog.html
@@ -33,19 +33,19 @@
 		}
 
 
-	    .logo {
-	    float: left;
-	    position: relative;
-	    top: 15px;
-	    width: 80px;
-	    height: 80px;
-    	background-image: url("img/trend-e_combined.png");
-        }
+	 
+	.logo {
+	float: left;
+	position: relative;
+	top: 0px;
+	width: 200px;
+	height: 80px;
+	background-image: url("http://i.imgur.com/kejx12s.png");
+}
 
-        .logo:hover {
-	        background-position: bottom;
-        }
-
+.logo:hover {
+	background-position: bottom;
+}
 		.logotext{
 		  	position: relative;
 		  	right: 0px;
@@ -112,7 +112,6 @@
 			<div class="wrapper">
 				<div class="logo"></div>
 
-				<a href="http://tinypic.com?ref=2ag99xd"><a>	
 				<ul>
 					<a href="/" target="_self"><li>HOME</li><a>
 					<a href="/betrende" target="_self"><li>BE TREND-E</li></a>
