--- a/templates/index.html
+++ b/templates/index.html
@@ -34,18 +34,19 @@
 		  	border-bottom: 1px solid #cecece; /* Adds a thin grey line to the bottom of the header*/
 		}
 
-		.logo {
-		  	float: left;
-	 	  	position: relative;
-		  	top: 15px;
-		  	width: 50px;
-		  	height: 50px;
-		  	
-		}
+		
+	.logo {
+	float: left;
+	position: relative;
+	top: 0px;
+	width: 200px;
+	height: 80px;
+	background-image: url("http://i.imgur.com/kejx12s.png");
+}
 
-		.logo:hover {
-		  	background-position: bottom;
-		}
+.logo:hover {
+	background-position: bottom;
+}
 
 		.logotext{
 		  	position: relative;
@@ -157,12 +158,10 @@
 			<div class="wrapper">
 				<div class="logo"></div>
 
-				<a href="http://tinypic.com?ref=2ag99xd"><a>	
 				<ul>
 
 					<a href="/" target="_self"><li class="menupage">HOME</li></a>
 					<a href="/betrende" target="_self"><li>BE TREND-E</li></a>
-					<a href="/buytrende"><li>BUY TREND-E</li></a>
 					<a href="/blog"><li>BLOG</li></a>
 					<a href="/sayhello"><li>SAY HELLO</li></a>
 
