--- a/templates/betrende.html
+++ b/templates/betrende.html
@@ -178,9 +178,7 @@
 				<div id="ebayTrend"class="betrendebanner"> 
 					<h2> BE TREND-E</h2>
 					<script class="ebaypics" > 
-=======
-=======
->>>>>>> 7bc11d00f6ed8e7cb3a302b785296464e437672e
+
 		.betrendebanner{
     		margin-top:50px;
             overflow:hidden;
@@ -217,7 +215,13 @@
         <div id="ebayTrend"class="betrendebanner"> 
             <h2> BE TREND-E</h2>
             <script > 
-
+<div id="sb-search" class="sb-search">
+    <form>
+        <input class="sb-search-input" placeholder="Enter your search term..." type="search" value="" name="search" id="search">
+        <input class="sb-search-submit" type="submit" value="">
+        <span class="sb-icon-search"></span>
+    </form>
+</div>
 
           function _cb_findItemsByKeywords(root) {
           	var items = root.findItemsByKeywordsResponse[0].searchResult[0].item || [];
@@ -292,7 +296,7 @@ url += "&GLOBAL-ID=EBAY-US";
 url += "&RESPONSE-DATA-FORMAT=JSON";
 url += "&callback=_cb_findItemsByKeywords";
 url += "&REST-PAYLOAD";
-url += "&keywords= clothes";
+url += "&keywords= sb-search";
 url += "&paginationInput.entriesPerPage=50";
 url += urlfilter;
 
