--- a/templates/betrende.html
+++ b/templates/betrende.html
@@ -83,7 +83,7 @@
 	top: 0px;
 	width: 200px;
 	height: 80px;
-	background-image: url("http://i.imgur.com/kejx12s.png");
+	background-image: url("img/trend-e_combined.png");
 }
 
 .logo:hover {
@@ -113,7 +113,6 @@
 		height: 80px;
 		width: 110px;
 
-
 		/*fixing the issue of boxes surpassing the boarder*/
 		float: left;
 		/*centering text in the boxes*/
@@ -138,7 +137,6 @@
 
 		background-color:white;
 	}
-
 
 	.betrendebanner{
 		margin-top:50px;
@@ -178,39 +176,7 @@
 				<div id="ebayTrend"class="betrendebanner"> 
 					<h2> BE TREND-E</h2>
 					<script class="ebaypics" > 
-
-		.betrendebanner{
-    		margin-top:50px;
-            overflow:hidden;
-             
-
-        width: 100%;
-        background-color: #C6C6C6;
-        float: left;
-    }
-    </style>
-  
-  </head>
-
-  <body>
-     
-  
-    <nav>
-      <div class="wrapper">
-        <div class="logo"></div>
-
-
-        <ul>
-          <a href="/" target="_self"><li>HOME</li></a>
-          <a href="/betrende" target="_self"><li class="menupage">BE TREND-E</li></a>
-          <a href="/blog"><li>BLOG</li></a>
-          <a href="/sayhello"><li>SAY HELLO</li></a>
-        </ul>
-      </div>
-    </nav>
-
-    <header> 
-      <div class="wrapper">
+          // Parse the response and build an HTML table to display search results
 
 
           function _cb_findItemsByKeywords(root) {
@@ -286,7 +252,7 @@ url += "&GLOBAL-ID=EBAY-US";
 url += "&RESPONSE-DATA-FORMAT=JSON";
 url += "&callback=_cb_findItemsByKeywords";
 url += "&REST-PAYLOAD";
-url += "&keywords= sb-search";
+url += "&keywords= clothes";
 url += "&paginationInput.entriesPerPage=50";
 url += urlfilter;
 
