--- a/templates/sayhello.html
+++ b/templates/sayhello.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
   		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   		<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
-		<style> 
+				<style> 
 	    	@charset "utf-8";
 
 			/*reset sheet*/
@@ -24,12 +24,6 @@
 
 		h1 {
 			text-align: center;
-			font-family: arial;
-		}
-
-		.whoamit1 {
-			margin: 0, auto;
-			width: 1200px;
 		}
 
 		nav {
@@ -39,7 +33,7 @@
 		}
 
 
-	  
+	 
 	.logo {
 	float: left;
 	position: relative;
@@ -52,7 +46,6 @@
 .logo:hover {
 	background-position: bottom;
 }
-
 		.logotext{
 		  	position: relative;
 		  	right: 0px;
@@ -89,7 +82,7 @@
 			background-color: #f2f2f2;	 
 		}
 
-		.sayhellobutton {
+		.blogbutton {
 			background-color: #f2f2f2;
  			color: orange;
 		}
@@ -101,15 +94,16 @@
     		background-color:white;
 		}
 
+	
+
 
 		.sayhellobanner{
-    		margin-top:10px;
+  			margin-top:10px;
     		height: 490px;
     		width: 100%;
     		background-color: #C6C6C6;
     		float: left;
-		}
-
+    	}
 
 		</style>
 	
