--- a/templates/betrende.html
+++ b/templates/betrende.html
@@ -73,14 +73,14 @@
 	nav {
 		width:100%;
 		height:80px;
-		border-bottom: 1px solid #cecece; /* Adds a thin grey line to the bottom of the header*/
+		border-bottom: 1px solid #42ff23; /* Adds a thin grey line to the bottom of the header*/
 	}
 
 
 	.logo {
 	float: left;
 	position: relative;
-	top: 0px;
+	top: -2px;
 	width: 200px;
 	height: 80px;
 	background-image: url("http://i.imgur.com/kejx12s.png");
@@ -123,11 +123,11 @@
 	}
 
 	nav ul li:hover{
-		background-color: #f2f2f2;	 
+		background-color: #42ff23;	 
 	}
 
 	.menupage {
-		background-color: #f2f2f2;
+		background-color: #42ff23;
 		color: orange;
 	}
 
@@ -143,7 +143,7 @@
 		overflow: hidden;
 		width: 600px;
 		height: auto;
-		background-color: #C6C6C6;
+		background-color: #42ff23;
 		float: left;
 	}
 
