--- a/templates/sayhello.html
+++ b/templates/sayhello.html
@@ -101,7 +101,7 @@
   			margin-top:10px;
     		height: 490px;
     		width: 100%;
-    		background-color: #C6C6C6;
+    		background-color: #42ff23;
     		float: left;
     	}
 
