--- a/templates/betrende.html
+++ b/templates/betrende.html
@@ -83,7 +83,7 @@
 	top: -2px;
 	width: 200px;
 	height: 80px;
-	background-image: url("http://i.imgur.com/kejx12s.png");
+	background-image: url("http://i.imgur.com/4exVVjE.png");
 }
 
 .logo:hover {
