--- a/templates/index.html
+++ b/templates/index.html
@@ -85,9 +85,9 @@
 		}
 
 		.menupage {
-			background-color: #42ff23
+			background-color: #42ff23;
  			color: white;
-		}
+    	}
 
 		header {
     		height:590px;
