--- a/templates/sayhello.html
+++ b/templates/sayhello.html
@@ -97,12 +97,10 @@
 	
 
 
-		.sayhellobanner{
-  			margin-top:10px;
-    		height: 490px;
-    		width: 100%;
-    		background-color: #42ff23;
-    		float: left;
+		.sayhellobutton{
+			background-color: #42ff23;
+ 			color: white;
+    	
     	}
 
 		</style>
